--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-static": "^1.2.6",
     "multer": "^1.4.2",
     "mysql": "^2.18.1"
   }
