--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
