--- a/vue/package.json
+++ b/vue/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
+    "echarts": "^4.9.0",
     "element-ui": "^2.13.0",
+    "moment": "^2.28.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2",
