--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-static": "^1.2.6",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "request": "^2.88.2"
   }
 }
